--- a/src/css/inABitStyle.css
+++ b/src/css/inABitStyle.css
@@ -1,102 +1,96 @@
-/*
-CSS controls the styling of the page.
-You can write a color in directly, or use variables.
-Try changing the color from blue to red in the
-primary color variable below.
-*/
+.header {
+	padding: 60px;
+	text-align: left;
+	color: black;
+	font-size: 30px;
+	border: 2.5px solid black; /* Draggable border */
+	box-shadow: 2px 5px 4px rgba(0,0,0,0.5);
+	border-radius: 20px;
+	background: linear-gradient(270deg, #85C1E9, #E59866, #F2F3F4);
+	background-size: 600% 600%;
+	animation: Gradient 15s ease infinite;
+ }
 
-:root {
-	--color-primary: blue;
-	--color-secondary: #c00;
-}
+ /* Define the animation keyframes */
+ @keyframes Gradient {
+	  0% {
+			background-position: 0% 50%;
+	  }
+	  50% {
+			background-position: 100% 50%;
+	  }
+	  100% {
+			background-position: 0% 50%;
+	  }
+ }
 
-/*
-CSS doesn't allow variables to be used in media
-queries just yet, but you can use these values
-to help you out.
-
-	--size-xs: 320px;
-	--size-sm: 480px;
-	--size-md: 768px;
-	--size-lg: 1024px;
-	--size-xl: 1200px;
-*/
-
-h1 {
-	color: var(--color-primary);
-}
-
-/* This uses the same value as --size-xs. */
-@media screen and (width >= 320px) {
-	.content-container {
-		margin: 0 auto;
-		max-width: 768px;
-	}
-}
+ h1{
+	color: #0032a9;
+ }
 
 
- .button-link-Fine {
-	transition: all 0.5s;
-	font-size: 17px;
-	padding: 1ch 2ch;
-	background-color: white;
-	color: #000;
-	font-family: Roboto, sans-serif;
+
+ body{
+	background: #EEEEEE;
+	font-family: "Alata", sans-serif;
+	font-weight: 700;
+	font-size: 36px;
+ }
+
+ .sticky-note {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	background-color: yellow;
+	padding: 10px;
+	box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+	cursor: move; /* Change the cursor to indicate movability */
+	border: 2px solid rgba(0, 0, 0, 0.2); /* Draggable border */
+ }
+
+ .sticky-note textarea {
+	flex-grow: 1;
+	width: calc(100% - 20px); /* Full width minus padding */
+	height: calc(100% - 40px); /* Full height minus padding and border */
 	border: none;
-	border-radius: 2px;
-	box-shadow: 2px 2px 0px hsl(0, 0%, 90%),
-	  4px 4px 0px hsl(0, 0%, 80%),
-	  6px 6px 0px hsl(0, 0%, 70%),
-	  8px 8px 0px hsl(0, 0%, 60%),
-	  10px 10px 0px hsl(0, 0%, 50%),
-	  12px 12px 0px hsl(0, 0%, 40%),
-	  14px 14px 0px hsl(0, 0%, 30%),
-	  16px 16px 0px hsl(0, 0%, 20%),
-	  18px 18px 0px hsl(0, 0%, 10%);
- }
-
- .button-link-Fine:hover {
-	background-color: hsl(0, 0%, 50%);
-	color: #fff;
-	box-shadow: none;
- }
-
-
- .button-link-Later {
-	display: inline-block;
-	padding: 10px 20px;
-	margin: 10px;
-	background-color: #f44336;
-	color: white;
+	background: transparent;
+	resize: none;
 	text-align: center;
-	text-decoration: none;
-	border-radius: 5px;
-	font-weight: bold;
+	outline: none;
+	font-family: "Caveat", cursive;
+	font-weight: 500;
+	font-size: 24px;
  }
 
-
- .button-link-Tomorrow  {
-	display: inline-block;
-	padding: 10px 20px;
-	margin: 10px;
-	background-color: #f44336;
-	color: white;
-	text-align: center;
-	text-decoration: none;
-	border-radius: 5px;
-	font-weight: bold;
+ .custom-context-menu {
+	font-size: 12px;
+	display: none;
+	position: absolute;
+	z-index: 1000;
+	width: 150px;
+	background: white;
+	border: 1px solid #ddd;
+	box-shadow: 2px 2px 5px #cfcfcf;
  }
 
-
- .button-link-InABit {
-	display: inline-block;
-	padding: 10px 20px;
-	margin: 10px;
-	background-color: #f44336;
-	color: white;
-	text-align: center;
-	text-decoration: none;
-	border-radius: 5px;
-	font-weight: bold;
+ .custom-context-menu ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
  }
 
+ .custom-context-menu ul li {
+	padding: 8px 12px;
+	cursor: pointer;
+ }
+
+ .custom-context-menu ul li:hover {
+	background-color: #f7f7f7;
+ }
+
+ .sticky-note.selected {
+	border: 2px solid red; /* Example style for selected sticky notes */
+ }
