--- a/src/css/fineStyle.css
+++ b/src/css/fineStyle.css
@@ -1,41 +1,4 @@
-/*
-CSS controls the styling of the page.
-You can write a color in directly, or use variables.
-Try changing the color from blue to red in the
-primary color variable below.
-*/
-
-:root {
-	--color-primary: blue;
-	--color-secondary: #c00;
-}
-
-/*
-CSS doesn't allow variables to be used in media
-queries just yet, but you can use these values
-to help you out.
-
-	--size-xs: 320px;
-	--size-sm: 480px;
-	--size-md: 768px;
-	--size-lg: 1024px;
-	--size-xl: 1200px;
-*/
-
-h1 {
-	color: var(--color-primary);
-}
-
-/* This uses the same value as --size-xs. */
-@media screen and (width >= 320px) {
-	.content-container {
-		margin: 0 auto;
-		max-width: 768px;
-	}
-}
-
-
- /* styles.css */
+/* styles.css */
 /* General styling for the entire page */
 body {
 	font-family: "Alata", sans-serif;
@@ -44,14 +7,15 @@ body {
 }
 
 .wrapper {
-	max-width: 1100px;
-	margin: 15px center;
+	max-width: 100vh;
+	margin: auto;
+  transform: none;
 }
 
 /* Calendar container */
 .container-calendar {
 	background: #ffffff;
-	padding: 15px;
+	padding: 50px;
 	max-width: 900px;
 	margin: 250px auto; /*made it centered in the page*/
 	overflow: auto;
@@ -60,9 +24,9 @@ body {
   border: 2.5px solid black; /* Draggable border */
   box-shadow: 2px 5px 4px rgba(0,0,0,0.5);
   border-radius: 20px;
-      background: linear-gradient(270deg, #85C1E9, #E59866, #F2F3F4);
-    background-size: 600% 600%;
-    animation: Gradient 15s ease infinite;
+  background: linear-gradient(270deg, #85C1E9, #E59866, #F2F3F4);
+  background-size: 600% 600%;
+  animation: Gradient 15s ease infinite;
 }
 
 /* Define the animation keyframes */
@@ -78,6 +42,9 @@ body {
     }
 }
 
+#left{
+	padding: 20px;
+}
 
 /* Event section styling */
 #event-section {
@@ -285,4 +252,80 @@ body {
 	border: 1px solid #bfc5c5;
 	border-radius: 3px;
 	padding: 5px 1em;
+}
+
+
+/*Menu Button*/
+.menu-button {
+  position: relative;
+  right: -3.5%;
+  display: flex; /* Use flexbox to center the content inside the button */
+  justify-content: center; /* Center the content horizontally */
+  align-items: 50%; /* Center the content vertically */
+  margin: 5px;
+}
+
+.button-dropdown-menu {
+  font-family: 'Alata', sans-serif;
+  background-color: #212121;
+  color: white;
+  padding: 3px 10px;
+  font-size: 20px;
+  font-weight: bold;
+  border: 2px solid #F57C00;
+  border-radius: 15px;
+  box-shadow: 2px 5px 4px rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+
+.button-dropdown-menu svg {
+  font-size: 15px; /* Set the font-size of SVG to match the button text */
+  vertical-align: middle; /* Align the SVG vertically with the text */
+}
+
+.dropdown-content {
+  display: none;
+  font-size: 13px;
+  position: absolute;
+  z-index: 1;
+  min-width: 200px;
+  background-color: #212121;
+  border: 2px solid #0032a9;
+  border-radius: 0px 15px 15px 15px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+  font-family: 'Alata', sans-serif;
+  color: #F57C00;
+  padding: 8px 10px;
+  text-decoration: none;
+  display: block;
+  transition: 0.1s;
+}
+
+.dropdown-content a:hover {
+  background-color: #EEEEEE;
+  color: #212121;
+}
+
+.dropdown-content a:focus {
+  background-color: #212121;
+  color: #4CAF50;
+}
+
+.dropdown-content #top:hover {
+  border-radius: 0px 13px 0px 0px;
+}
+
+.dropdown-content #bottom:hover {
+  border-radius: 0px 0px 13px 13px;
+}
+
+.menu-button:hover button-dropdown-menu {
+  border-radius: 15px 15px 0px 0px;
+}
+
+.menu-button:hover .dropdown-content {
+  display: block;
 }
