--- a/src/css/inABitStyle.css
+++ b/src/css/inABitStyle.css
@@ -1,3 +1,8 @@
+html{
+	background-image: url("https://i.pinimg.com/originals/d9/de/f8/d9def8aa91baf1945e93df2bd9fac408.jpg");
+	background-size: 1920px 1080px;
+}
+
 .container-head {
 	padding: 25px;
 	text-align: left;
